Updates for JVM fork settings.