@@ -130,6 +130,9 @@ dependencies.
           <excludes>
             <exclude>com/bigdata/TestAll.java</exclude>
           </excludes>
+          <forkCount>1</forkCount>
+          <reuseForks>false</reuseForks>
+          <argLine>-Xmx1g -XX:MaxPermSize=256m</argLine>
         </configuration>
       </plugin>
     </plugins>
